[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix = "0.13.5"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = [
    "sync",
    "io-util",
    "net",
    "macros",
    "rt-multi-thread",
    "signal",
] }
colored = "2.0"
actix-rt = "2.11.0"
actix_async_handler = "0.1.0"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
num-traits = "0.2.19"
num-derive = "0.4.2"
quinn = "0.10"
rustls = "0.21"
erased-serde = "0.4.9"
