[package]
name = "gas_pump"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix = "0.13.5"
actix-rt = "2.11.0"
tokio = "1.48.0"
tokio-macros = "1"
tokio-util = "0.7"
common = { path = "../common" }
regional_admin = { path = "../regional_admin" }
serde = { version = "1.0", features = ["derive"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.9.2"
colored = "2.0"
quinn = "0.10"
rcgen = "0.11"
anyhow = "1.0"
