[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Testing dependencies
tokio = { version = "1.0", features = ["full", "test-util"] }
env_logger = "0.10"
log = "0.4"
colored = "2.0"
actix = "0.13"
common = { path = "../common" }
card = { path = "../card" }
company = { path = "../company" }
gas_pump = { path = "../gas_pump" }
regional_admin = { path = "../regional_admin" }

[lib]
name = "integration_tests"
path = "src/lib.rs"
